force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>Stores details of customer-owned vehicles serviced at the garage, including VIN, make, model, and year. Linked to the customer (Account) and serves as the parent record for all Service Requests performed on that vehicle.</description>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>VEH-{0000}</displayFormat>
        <label>Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>