force-app/main/default/objects/Vehicle__c/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <description>The date this vehicle most recently completed a service. Used to calculate when the next service reminder notification should be sent to the customer</description>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>