force-app/main/default/objects/Vehicle__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <description>The vehicle&apos;s registration/license plate number. Used for quick identification when VIN is not readily available, such as during customer phone calls.</description>
    <label>License Plate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>