force-app/main/default/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The manufacturer of the vehicle (e.g., Toyota, Honda). Used for service recommendations, reporting, and filtering vehicles by brand.</description>
    <label>Make</label>
    <length>50</length>
    <type>Text</type>
</CustomField>