force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The model name of the vehicle (e.g., Civic, Swift). Used alongside Make to identify the vehicle in service records and customer communications.</description>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>