force-app/main/default/objects/Vehicle__c/fields/Owner_Customer__c.field-meta.xml
<CustomField>
    <fullName>Owner_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person Account</description>
    <label>Owner Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>