force-app/main/default/objects/Vehicle__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>Prevents duplicate vehicle records</description>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>