force-app/main/default/objects/Vehicle__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The manufacturing year of the vehicle. Used to assess vehicle age for service planning and reporting; cannot be set later than one year in the future.</description>
    <label>Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>