force-app/main/default/objects/Vehicle__c/validationRules/Year_Cannot_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Cannot_Be_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Year__c  &gt; YEAR(TODAY()) + 1</errorConditionFormula>
    <errorMessage>Year cannot be in the future</errorMessage>
</ValidationRule>